Full implementation of data division and symbol table.